2007-09-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkpagesetup.xml: fixed a wrong parameter name and definition.
	* pygtk-gtkprintsettings.xml:
	* pygtk-gtkplug.xml:
	* pygtk-gtkprinter.xml: Updated with 2.12 API.

2007-09-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkpagesetup.xml:
	* pygtk-gtknotebook.xml:
	* pygtk-gtkmenushell.xml: Updated with 2.12 API.

2007-08-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkmenutoolbutton.xml: Update with 2.12 API.

2007-08-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtktooltip.xml:
	* pygtk-gtk-classes.xml: Add new gtk.Tooltip() docs.

2007-08-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkvolumebutton.xml:
	* pygtk-gtk-classes.xml: Add new gtk.VolumeButton() docs.

2007-08-04  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkiconview.xml: Update with 2.12 API.

2007-07-30  Paul Pogonyshev  <pogonyshev@gmx.net>

	* pygtk-pygtkgenerictreemodel.xml: Document new create_tree_iter()
	and get_user_data().

2007-07-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkicontheme.xml: Update with 2.12 API.

2007-07-28  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkmenuitem.xml
	* pygtk-gtkcombobox.xml
	* pygtk-gtkentrycompletion.xml
	* pygtk-gtkentry.xml
	* pygtk-gtkcellrendererprogress.xml: Update with 2.12 API.

2007-07-25  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkcelllayout.xml: Update with 2.12 API.

2007-07-25  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkaction.xml: Update with 2.12 API.

2007-07-25  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkaboutdialog.xml: Update with 2.12 API.

2007-07-25  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkscalebutton.xml:
	* pygtk-gtk-classes.xml: Add new gtk.ScaleButton() docs.

2007-07-24  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkbuildable.xml:
	* pygtk-gtk-classes.xml: Add new gtk.Buildable() docs.
