@@ -1,3 +1,7 @@
+2007-09-31  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	* pygtk-gtkrange.xml: Updated with 2.12 API.
+
 2007-09-30  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* pygtk-gtkpagesetup.xml: fixed a wrong parameter name and definition.
